# celebrity-studio-for-anything

./: .gitignore  README.md  README.zh-CN.md  README_GITHUB.md  README_GITHUB_enhanced.md  _demo_style.docx  pyproject.toml
codex-skill/celebrity-studio-anything/: SKILL.md
data/celebrities/distilled_skills/anurag-kashyap/: SKILL.md
data/celebrities/distilled_skills/bink-music-producer/: SKILL.md
data/celebrities/distilled_skills/brendan-o-brien-music-producer/: SKILL.md
docs/: architecture.md  demo-cantopop-cyberpunk-test.md  eval-plan.md  product-spec.md  prompting.md  regression-cases.md  safety-and-ethics.md
output/: README.md
output/scenario-20260408-182643/: candidates.json  debate.json  report.md  result.json  scenario.json  selection.json  skills.json  studio.json
output/scenario-20260409-031622/: debate.json  report.md  result.json  scenario.json  selection.json  skills.json  studio.json
output/scenario-20260409-032634/: candidates.json  debate.json  report.md  result.json  runtime.json  scenario.json  selection.json  skills.json  studio.json
scripts/: run_studio.py
src/celebrity_studio/: __init__.py  agent_runtime.py  api_server.py  celebrity_ranker.py  celebrity_retriever.py  cli.py  config.py  debate_engine.py  distillation_engine.py  llm.py  models.py  pipeline.py  providers.py  result_formatter.py  scenario_parser.py  studio_orchestrator.py  synthesis_engine.py  utils.py
tests/: test_api_catalog.py  test_guardrails.py  test_offline_pipeline.py  test_selection_controls.py
web/: index.html  main.js
(+67 files in other folders)
